[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "xhs-studio"
version = "1.0.0"
description = "Claude Code Skill for Xiaohongshu (小红书) — full workflow from trending search to publishing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["xiaohongshu", "xhs", "claude-code", "skill", "social-media", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/waynefu2020/xhs-studio"
Repository = "https://github.com/waynefu2020/xhs-studio"
Issues = "https://github.com/waynefu2020/xhs-studio/issues"
